MOD add configurations